# BuildTravisCI

./: .travis.yml  CMakeLists.txt  README.md  Source.cpp
TravisTest/: TravisTest.sln
TravisTest/TravisTest/: Source.cpp  TravisTest.cpp  TravisTest.vcxproj  TravisTest.vcxproj.filters
TravisTest/include/: TMath.h
TravisTest/source/: TMath.cpp  TravisTest.cc  TravisTest.cpp
